--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,97 @@ html, body{
     width: 100%;
     background: black;
 }
+
+header{
+    height: 100vh;  
+    position: relative; 
+    display: flex;
+}
+
+.cover-date{
+    position: absolute;
+    left: 10%;
+    right: 10%;
+    color: #fff;
+    opacity: 0.7;
+}
+
+.cover{
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    right: 0;
+    object-fit: cover;
+    object-position: top;
+}
+
+nav{
+    background-color: #fff;
+    z-index: 2;
+    width: 40%;
+    height: 20%;
+    color: #916356;
+}
+
+.nav-closed{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 20%;
+    width: 40%;
+    position: absolute;
+}
+
+.nav-closed ul{
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.nav-open{
+    position: absolute;
+    width: 40%;
+    height: 80%;
+    top: 20%;
+    opacity: 0;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.clothing{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.clothing h2{
+    font-size: 50px;
+}
+
+.clothing ul li{
+    padding-bottom: 10px;
+    list-style: none;
+}
+
+.clothing ul li a{
+    text-decoration: none;
+    color:
+    #916356;
+}
+
+.nav-images {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.nav-images img{
+    height: 250px;
+}
